# cloudflare-cname-switcher

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  cname_switcher.py  config.sample.yml  docker-compose.yml
src/: backend.rs  endpoints.rs  http_server.rs  ingress.rs  lib.rs  main.rs
src/integrations/: cloudflare.rs  dns.rs  http.rs  mod.rs  telegram.rs
