[package]
name = "cloudflare-cname-switcher"
version = "2.2.12"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
tokio = { version = "1.48.0", features = ["full"] }
notify = "8.2.0"
prometheus = "0.14.0"
rustdns = "0.4.0"
rand = "0.9.2"
env_logger = "0.11.8"
log = "0.4.29"
hyper-util = { version = "0.1.19", features = ["tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.4"
rustls-pki-types = "1.13.1"
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
itertools = "0.14.0"
yaml-rust = "0.4.5"
