[package]
name = "cloudflare-cname-switcher"
version = "2.2.16"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
tokio = { version = "1.50.0", features = ["full"] }
notify = "8.2.0"
prometheus = "0.14.0"
rustdns = "0.4.0"
rand = "0.10.0"
env_logger = "0.11.9"
log = "0.4.29"
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"
rustls-pki-types = "1.14.0"
serde = "1.0.228"
serde_json = "1.0.149"
chrono = "0.4.44"
itertools = "0.14.0"
yaml-rust = "0.4.5"
